# aws-util

./: aws-util.cabal  stack.yaml
src/Jabara/AWS/: Util.hs
