name:                aws-util
version:             0.1.0.0
homepage:            https://github.com/jabaraster/aws-util/
license:             MIT
license-file:        LICENSE
author:              jabaraster
maintainer:          ah@jabara.info
copyright:           2017 jabaraster
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Jabara.AWS.Util
  build-depends:       base
                     , text
                     , directory
                     , lens
                     , amazonka
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/jabaraster/aws-util/
